--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.datasource.url=jdbc:h2:tcp://localhost/~/board
 spring.datasource.username=sa
 spring.datasource.password=
+
+
+server.servlet.session.tracking-modes=cookie
